delete one page and refactor

--- a/templates/admin_bot/start.tmpl
+++ b/templates/admin_bot/start.tmpl
@@ -1,8 +1,9 @@
 Привет. Это помощник для сбора оценок доклада.
 Здесь находится панель админа. Доступ пользователям выдается в конфигурационном файле.
 
+Чтобы загрузить расписание, нужно просто отправить `.csv` файл в чат.
+
 Команды:
 /help
-/submit
 /conference
 /schedule
