--- a/templates/admin_bot/submit_success_but_time_error.tmpl
+++ b/templates/admin_bot/submit_success_but_time_error.tmpl
@@ -1,6 +1,6 @@
 Файл загружен успешно, но возникла небольшая ошибка.
 
-Время окончания одного из доклада выходит за рамки конференции:
+Время окончания одного из докладов выходит за рамки конференции:
 Название доклада: %s
 Время окончания доклада: %s
 Время окончания конференции: %s
