add conference template

--- a/templates/info/conference.tmpl
+++ b/templates/info/conference.tmpl
@@ -1,6 +1,6 @@
 Текущая конференция:
 
-Название: %s
-URL: %s
-Начало: %s
-Конец: %s
+Название:   {{ .Conference.Name }}
+URL:        {{ .Conference.URL }}
+Начало:     {{ .Conference.StartTime }}
+Конец:      {{ .Conference.EndTime }}
