--- a/templates/admin_start.tmpl
+++ b/templates/admin_start.tmpl
@@ -1,10 +1,10 @@
 Привет. Это помощник для сбора оценок доклада.
 Здесь находится панель админа. Доступ пользователям выдается в конфигурационном файле.
 
-Чтобы загрузить расписание, нужно просто отправить `.csv` файл в чат.
+Чтобы загрузить расписание, нужно отправить `.csv` файл в чат.
 
 Команды:
 /help
-/conference
-/schedule
 /export
+
+Другие команды находятся в боте для пользователей.
