--- a/templates/admin_start.tmpl
+++ b/templates/admin_start.tmpl
@@ -1,7 +1,7 @@
 Привет. Это помощник для сбора оценок доклада.
 Здесь находится панель админа. Доступ пользователям выдается в конфигурационном файле.
 
-Чтобы загрузить расписание, нужно отправить `.csv` файл в чат.
+Чтобы загрузить расписание, нужно отправить `.csv` документ в чат.
 
 Команды:
 /help
