--- a/templates/user_start.tmpl
+++ b/templates/user_start.tmpl
@@ -1,11 +1,16 @@
-Привет. Это бот для оценивания докладов на конференции
+Привет. Это бот для оценивания докладов на конференции.
+Чтобы оценить нужный вам доклад, требуется открыть расписание, выбрать нужный доклад, нажать на кнопку "Оценить".
+Чтобы добавить напоминание о докладе, требуется открыть расписание, выбрать нужный доклад, нажать на кнопку "Создать напоминание".
 
 Команды:
 /help - помощь
 /conference - текущая конференция
 /schedule - расписание докладов
 
-/my_notification - мои напоминания
-/set_notification - создать напоминания
+/my_info - задать личные идентификационные данные
 
-/evaluate
+Будущая функциональность:
+# проверка времени отправляемой оценки (от начала доклад до конца времени оценивание)
+# добавить кнопку создания нотификации
+/my_notifications - мои напоминания
+/my_evaluations - мои оценки
