clear user start

--- a/templates/user_authorization.tmpl
+++ b/templates/user_authorization.tmpl
@@ -1,4 +1,4 @@
-Прежде чем пользоваться ботом, нужно указать свои идентификационные данные.
+Чтобы учитывалась ваша оценка нужно указать свои идентификационные данные.
 
 Например: номер билета, email, ФИО, etc.
 
